--- a/index.html
+++ b/index.html
@@ -97,5 +97,28 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+    <script src="js/google-spreadsheets-db.min.js"></script>
+    <script>
+
+        const db = new GoogleSpreadsheetsDb(
+            'AIzaSyBdjsu_0mERhpzaz79MxeFzhcyqsiniImc',
+            '1aYiKsFBPBYhj_uIE8OQZJe8N-7GF-llPyQDvXaneoOY'
+        );
+
+        db.getAll('portifolio!A1:D3', (err, entries) => {
+
+            console.log(entries);
+        /**
+        * entries will be an array of objects
+        * the object's keys are the column names of your sheet, ie:
+        * [{ name: "First item", description: "some desc." },
+        *  { name: "First item", description: "some desc." }]
+        */
+        })
+
+
+
+    </script>
   </body>
 </html>
